# apsi-demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: apsi_use.puml
data/: db.csv  query.csv  result.csv  test_data_creator.py
src/common/: CMakeLists.txt  csv_reader.cpp  csv_reader.h
src/receiver/: CMakeLists.txt  receiver.cpp
src/sender/: CMakeLists.txt  sender.cpp
